// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageValidators shows a list of validators 1`] = `
<tmpage-stub
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="filterOptions"
    >
      <tmfield-stub
        class="searchField"
        placeholder="Search"
        type="text"
        value=""
      />
       
      <div
        class="toggles"
      >
        <tmbtn-stub
          class="btn-radio secondary"
          type="secondary"
          value="All"
        />
         
        <tmbtn-stub
          class="btn-radio secondary"
          type="active"
          value="Active"
        />
      </div>
    </div>
     
    <tablevalidators-stub
      delegations=""
      showonmobile="expectedReturns"
      validators="[object Object],[object Object],[object Object],[object Object],[object Object]"
    />
     
    <!---->
  </template>
</tmpage-stub>
`;

exports[`PageValidators shows a message if still loading 1`] = `
<tmpage-stub
  dataempty="true"
  hideheader="true"
  loading="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="filterOptions"
    >
      <tmfield-stub
        class="searchField"
        placeholder="Search"
        type="text"
        value=""
      />
       
      <div
        class="toggles"
      >
        <tmbtn-stub
          class="btn-radio secondary"
          type="secondary"
          value="All"
        />
         
        <tmbtn-stub
          class="btn-radio secondary"
          type="active"
          value="Active"
        />
      </div>
    </div>
     
    <tablevalidators-stub
      delegations=""
      showonmobile="expectedReturns"
      validators=""
    />
     
    <!---->
  </template>
</tmpage-stub>
`;

exports[`PageValidators shows a message if there is an error to display 1`] = `
<tmpage-stub
  dataempty="true"
  error="true"
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="filterOptions"
    >
      <tmfield-stub
        class="searchField"
        placeholder="Search"
        type="text"
        value=""
      />
       
      <div
        class="toggles"
      >
        <tmbtn-stub
          class="btn-radio secondary"
          type="secondary"
          value="All"
        />
         
        <tmbtn-stub
          class="btn-radio secondary"
          type="active"
          value="Active"
        />
      </div>
    </div>
     
    <tablevalidators-stub
      delegations=""
      showonmobile="expectedReturns"
      validators=""
    />
     
    <!---->
  </template>
</tmpage-stub>
`;

exports[`PageValidators shows a message if there is nothing to display 1`] = `
<tmpage-stub
  dataempty="true"
  hideheader="true"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <div
      class="filterOptions"
    >
      <tmfield-stub
        class="searchField"
        placeholder="Search"
        type="text"
        value=""
      />
       
      <div
        class="toggles"
      >
        <tmbtn-stub
          class="btn-radio secondary"
          type="secondary"
          value="All"
        />
         
        <tmbtn-stub
          class="btn-radio secondary"
          type="active"
          value="Active"
        />
      </div>
    </div>
     
    <tablevalidators-stub
      delegations=""
      showonmobile="expectedReturns"
      validators=""
    />
     
    <!---->
  </template>
</tmpage-stub>
`;
